<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stackerz</string>
    <string name="overviewSection">Overview</string>
    <string name="instancesSection">Instances</string>
    <string name="flavorsSection">Flavors</string>
    <string name="imagesSection">Images</string>
    <string name="networksSection">Networks</string>
    <string name="routersSection">Routers</string>
    <string name="projectsSection">Projects</string>
    <string name="subnetsSection">Subnets</string>
    <string name="securitySection">Security Groups</string>
    <string name="usersSection">Users</string>
    <string name="userLoginTV">User Name:</string>
    <string name="userLoginET">john.doe</string>
    <string name="userPasswordTV">Password:</string>
    <string name="userPasswordET">p@ssw0rd</string>
    <string name="tenantNameTV">Tenant:</string>
    <string name="tenantNameET">tenant</string>
    <string name="serverTV">Server:</string>
    <string name="serverET">http://keystone:5000/v2.0/tokens</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Action</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_connect">Connect</string>
    <string name="action_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
