<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.stackerz.app.ProjectsFragment"
    >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="71dp"
                android:text="@string/serverTV"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/serverTV"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/server"
                android:layout_toEndOf="@+id/serverTV"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:hint="@string/serverET"
                android:textAlignment="center"
                android:inputType="text|textUri"
                android:gravity="center"
                android:padding="10dp"
                android:layout_alignEnd="@+id/userName"
                android:layout_alignStart="@+id/userName"
                android:layout_below="@+id/serverTV"
                android:layout_alignParentLeft="true"
                android:background="@android:drawable/toast_frame"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userLoginTV"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/userNameTV"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/server"
                android:layout_alignParentLeft="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/userName"
                android:layout_toEndOf="@+id/userNameTV"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:hint="@string/userLoginET"
                android:textAlignment="center"
                android:inputType="text"
                android:gravity="center"
                android:padding="10dp"
                android:layout_alignEnd="@+id/imageView"
                android:layout_below="@+id/userNameTV"
                android:layout_alignParentLeft="true"
                android:background="@android:drawable/toast_frame"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPasswordTV"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/passwordTV"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/userName"
                android:layout_alignParentLeft="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/password"
                android:layout_toEndOf="@+id/passwordTV"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:hint="@string/userPasswordET"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_alignEnd="@+id/imageView"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_alignStart="@+id/userName"
                android:layout_below="@+id/passwordTV"
                android:layout_alignParentLeft="true"
                android:background="@android:drawable/toast_frame"
                android:textColor="@android:color/white" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/openstack_logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="true"
                android:layout_alignWithParentIfMissing="false"
                android:alpha="0.05"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Connect"
                android:id="@+id/connectButtonLogin"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:textColor="#ffffff"
                android:background="@drawable/rounded_selector" />
            />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>